# MLOps-Trabajo_Final

./: .gitignore  BERT_Model.ipynb  README.md  pyproject.toml
config/: settings.py
models/: LogisticRegression.ipynb  RandomForest.ipynb  base_model.ipynb  etl.ipynb
notebooks/: eda.ipynb
src/pred-online/: README.md  app_predict.py  best_model_vectorizer.ipynb
src/pred-online/best_model_vectorizer/: vectorizer_RN.pkl
src/training/: README.md  etl.py  feature_engineer.py  task_train.ipynb  task_train_prefect.ipynb  task_train_prefect.py  task_traing.ipynb  train.py  train_with_mlflow.py  train_with_mlflow_optuna.py
src/utils/: conexion.py
