[project]
name = "proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "asttokens>=3.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyodbc>=5.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "xgboost>=3.0.5",
]
